force-app/main/default/objects/coder_AgentNotes__c/coder_AgentNotes__c.object-meta.xml
<CustomObject>
    <label>Agent Notes</label>
    <pluralLabel>Agent Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Agent Notes Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>