force-app/main/default/objects/coder_AgentNotes__c/fields/coder_Description__c.field-meta.xml
<CustomField>
    <fullName>coder_Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>