force-app/main/default/objects/coder_AgentNotes__c/fields/coder_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>coder_Issue_Date__c</fullName>
    <label>Issue Date</label>
    <type>Date</type>
</CustomField>