force-app/main/default/objects/coder_AgentNotes__c/fields/coder_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>coder_Issue_Type__c</fullName>
    <label>Issue type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Login issue</fullName>
            </value>
            <value>
                <fullName>Delivery Issue</fullName>
            </value>
        </valueSetDefinition>
        <restricted>true</restricted>
    </valueSet>
</CustomField>